updated wireframe images

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section class='container'>
             <article class='js-top-text'>Instructions...</article>
             <section class='js-inner-sect'>
-                <img src='' alt='cool picture 1'>
+                <img src='images/jupiter.jpg' alt='cool picture 1'>
             </section>
             <button class='butt'>Start Quiz!</button>
         </section>
@@ -45,7 +45,7 @@
                 <span>Final score: y</span>
             </article>
             <section class='js-inner-sect'>
-                <img src='' alt='cool picture 2'>
+                <img src='images/galaxy.jpg' alt='cool picture 2'>
             </section>
             <button class='butt'>Restart!</button>
         </section>
