fixed radio buttons

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             </article>
             <section class='js-inner-sect'>
                 <form>
-                  <input type='radio' name='option1' id='A' value='A'>
+                  <input type='radio' name='option' id='A' value='A'>
                   <label for='A'>Option 1</label><br />
-                  <input type='radio' name='option2' id='B' value='B'>
+                  <input type='radio' name='option' id='B' value='B'>
                   <label for='A'>Option 2</label><br />
-                  <input type='radio' name='option3' id='C' value='C'>
+                  <input type='radio' name='option' id='C' value='C'>
                   <label for='A'>Option 3</label><br />
-                  <input type='radio' name='option4' id='D' value='D'>
+                  <input type='radio' name='option' id='D' value='D'>
                   <label for='A'>Option 4</label><br />
                   <input type='submit' value='Submit' class='butt'>
                 </form>
