updated html and wrote landingPage fx

--- a/wireframe/wireframe.html
+++ b/wireframe/wireframe.html
@@ -13,8 +13,9 @@
         <section class='container'>
             <article class='js-top-text'>Instructions...</article>
             <section class='js-inner-sect'>
+                <!-- <img src='images/jupiter.jpg' alt='cool picture 1'> -->
             </section>
-            <button class='butt'></button>
+            <button></button>
         </section>
 
         <section class='container'>
@@ -35,6 +36,7 @@
                   <input type='submit' value='Submit' class='butt'>
                 </form>
             </section>
+            <button class='button-next'>Next question</button>
         </section>
 
         <section class='container'>
@@ -45,6 +47,7 @@
             <section class='js-inner-sect'>
                 <img src='images/galaxy.jpg' alt='cool picture 2'>
             </section>
+            <button class='button-restart'>Restart!</button>
         </section>
     </main>
 
