--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <article class='js-top-text'>Instructions...</article>
             <section class='js-inner-sect'>
             </section>
-            <button class='butt'></button>
+            <button class='butt button-bottom' type='button' disable='false'></button>
         </section>
 
         <section class='container'>
