minor updates to html, submit fx, and store

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <label for='A'>Option 3</label><br />
                   <input type='radio' name='option' id='D' value='D'>
                   <label for='A'>Option 4</label><br />
-                  <input type='submit' value='Submit' class='butt'>
+                  <input type='submit' value='Submit' class='butt sub'>
                 </form>
             </section>
         </section>
