--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     </header>
     <main>
         <section class='container'>
-            <article class='js-top-text'>Instructions...</article>
+            <article role='instructions' class='js-top-text'></article>
             <section class='js-inner-sect'>
             </section>
-            <button class='butt button-bottom' type='button'></button>
+            <button role='button' class='butt button-bottom' type='button'></button>
         </section>
     </main>
 
