--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Space Quiz</title>
+    <link href="https://fonts.googleapis.com/css?family=Audiowide|Turret+Road&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
